# Enterprise-Practice

./: .env.example  .gitignore  PROJECT.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 202605150001_create_competitors.py  202605150002_add_collection_and_reports.py  202605160001_add_source_configs.py
backend/app/: __init__.py  main.py
backend/app/agents/: prompts.py  workflow.py
backend/app/ai/: __init__.py  deepseek.py
backend/app/core/: config.py
backend/app/crawlers/: __init__.py  base.py  text_cleaner.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  analysis_report.py  competitor.py  embedding_metadata.py  news_article.py  source_config.py
backend/app/prompts/: price_prompt.md  product_prompt.md  sentiment_prompt.md  summary_prompt.md
backend/app/rag/: __init__.py  chunking.py  embeddings.py  exceptions.py  vector_store.py
backend/app/scheduler/: service.py
backend/app/schemas/: analysis.py  analysis_report.py  collection.py  competitor.py  daily_workflow.py  embedding_metadata.py  news_article.py  rag.py  source_config.py
backend/app/services/: analysis_service.py  article_service.py  collection_service.py  competitor_service.py  daily_workflow_service.py  embedding_metadata_service.py  (+3 more)
backend/tests/: conftest.py  test_analysis.py  test_collection_api.py  test_competitors.py  test_config.py  test_crawlers.py  test_daily_workflow.py  test_deepseek.py  test_health.py  test_rag.py  test_reports.py  test_sources.py
(+38 files in other folders)
