[project]
name = "competitive-intel-backend"
version = "0.1.0"
description = "Competitive intelligence tracking backend."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "apscheduler>=3.10.4",
  "anthropic>=0.40.0",
  "beautifulsoup4>=4.12.3",
  "chromadb>=0.5.23",
  "feedparser>=6.0.11",
  "fastapi>=0.115.5",
  "langchain>=0.3.7",
  "langchain-deepseek>=0.1.0",
  "langgraph>=0.2.53",
  "pydantic-settings>=2.6.1",
  "psycopg[binary]>=3.2.3",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "uvicorn[standard]>=0.32.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.1",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
